k8s/applications/dev/whoami/whoami-test/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-test
  namespace: whoami-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-test
  template:
    metadata:
      namespace: whoami-test
      labels:
        app.kubernetes.io/name: whoami-test
        app: whoami-test
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 999
      #   runAsGroup: 999
      #   fsGroup: 999
      #   fsGroupChangePolicy: OnRootMismatch
      #   seccompProfile:
      #     type: RuntimeDefault
      # resources:
      #   requests:
      #     cpu: 10m
      #     memory: 12Mi
      #   limits:
      #     cpu: 100m
      #     memory: 24Mi
      containers:
        - name: whoami
          # image: ghcr.io/nicolaka/netshoot:v0.15
          image: debian:trixie-slim
          command:
            - /whoami/whoami
          args:
            - "-port=8080"
          securityContext:              
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            capabilities:
              # drop: ["ALL"]
              add: [NET_ADMIN, CAP_SYS_ADMIN, CAP_NET_RAW]
          # resources:
          #   requests:
          #     cpu: 10m
          #     memory: 12Mi
          #   limits:
          #     cpu: 100m
          #     memory: 24Mi
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: whoami
              mountPath: /whoami
      volumes:
        - name: whoami
          image:
            reference: ghcr.io/traefik/whoami:latest
            pullPolicy: Always
