k8s/applications/dev/whoami/whoami-test/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-test
  namespace: whoami-test
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
