k8s/applications/dev/whoami/whoami-test/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-test
  namespace: whoami-test
spec:
  parentRefs:
    - kind: Gateway
      name: internal
      namespace: gateway
      sectionName: https-wc-talmox-hera-home-karlsen-fr
  hostnames:
    - whoami-test.talmox.hera.home.karlsen.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-test
          port: 8080
